--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,17 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    {% include head-custom.html %}
   </head>
   <body>
-    
+      <div id="header">
+        <nav>
+          
+        </nav>
+      </div><!-- end header -->
+
+    <div class="wrapper">
+
       <section>
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
