--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,7 @@
   <a href="{{ '/' | relative_url }}">Home</a> ·
   <a href="{{ '/research' | relative_url }}">Research</a> ·
   <a href="{{ '/publications' | relative_url }}">Publications</a> ·
+  <a href="{{ '/tools' | relative_url }}">Tools</a> ·
   <a href="{{ '/team' | relative_url }}">Team</a> ·
   <a href="{{ '/contact' | relative_url }}">Contact</a>
 </nav>
