--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       style="
         background:
           linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-          url('{{ 'banner.jpg' | relative_url }}') center/contain no-repeat;
+          url('{{ '/banner.jpg' | relative_url }}') center/contain no-repeat;
         background-color: #000;
       ">
       <h1 class="project-name">{{ site.title }}</h1>
